# lib-chat-bot

./: AUTHOR_SEARCH_IMPROVEMENT.md  CONVERSATIONAL_QUERIES_ISSUE.md  FINAL_AUTHOR_SEARCH_FIX.txt  INTENT_DETECTION_SUMMARY.md  README.md  README_BUSCAR_LIBROS.md  SDLLista14nov2025.xlsx  STATUS.txt  SUMMARY_FIXES.md  buscar_libros.py  check_isbn.py  debug_intent.py  debug_words.py  demo_author_focus.py  demo_garcia_marquez.py  demo_intent_detection.py  final_validation.py  find_garcia_marquez.py  pyproject.toml  test_author_fuzzy.py  test_author_scores.py  test_conversational_query.py  test_excel_search.py  test_final_demo.py  test_fuzzy_scores.py  test_gm_direct.py  test_harry_potter_typo.py  test_intent_detection.py  test_isbn_search.py  test_match.py  test_queries.py  test_word_ratio.py  ~$SDLLista14nov2025.xlsx
scripts/: manual_test.py
src/lib_chat_bot/catalog/: client.py  fallback.py  intent_detector.py  models.py  search_engine.py  synonyms.py
tests/: conftest.py  test_catalog_search.py  test_search_engine.py
